--- a/3HNM BANK/Loan.html
+++ b/3HNM BANK/Loan.html
@@ -23,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="css/style1.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
@@ -45,198 +46,205 @@
         th {
             background-color: #f2f2f2;
         }
-        }
     </style>
 </head>
 
 <body>
     <!-- header section strats -->
-    <header class="header">
+    <header class="header_section">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <img src="logo3.png" width="100" height="50">
-        </div>
-        </nav>
+                <img src="logo3.png" width="100" height="50" style="margin-left: 30px;">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+                        <div class="user_option">
+                            <form class="dropdown form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                                <button class="dropbtn btn  my-2 my-sm-0 nav_search-btn" onclick="Profile()">
+                                    <div class="dropdown-content">
+                                        <a href="index.html"> Log out</a>
+                                    </div>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
-    <div class="main">
-        <div class="column sidebar" style="-webkit-flex:0.3">
-            <ul>
-                <li id="dash"><a href="Dashboard.html">Dashboard</a></li>
-                <li id="tran"><a href="Transactions.html">Transactions</a></li>
-                <li id="transfers"><a href="#" class="first-btn">Transfers
-                        <i class="fa-solid fa-caret-down first"></i>
-                    </a>
-                    <ul class="first-show">
-                        <li id="internal"><a href="Internal Transfer.html">Internal Transfer</a></li>
-                        <li id="domestic"><a href="Domestic Transfer.html">Domestic Transfer</a></li>
-                        <li id="international"><a href="International Transfer.html">External Transfer</a></li>
-                        <li id="viewtrans"><a href="View All Transfers.html">View All Transfers</a></li>
-                    </ul>
-                </li>
-                <li id="credit"><a href="Credit Card.html">Credit Card</a></li>
-                <li id="Loan"><a href="Loan.html">Loans</a></li>
+    <main>
+        <div class="main">
+            <div class="column sidebar">
+                <ul>
+                    <li id="dash"><a href="Dashboard.html">Dashboard</a></li>
+                    <li id="tran"><a href="Transactions.html">Transactions</a></li>
+                    <li id="transfers"><a href="#" class="first-btn">Transfers
+                            <i class="fa-solid fa-caret-down first"></i>
+                        </a>
+                        <ul class="first-show">
+                            <li id="internal"><a href="Internal Transfer.html">Internal Transfer</a></li>
+                            <li id="domestic"><a href="Domestic Transfer.html">Domestic Transfer</a></li>
+                            <li id="international"><a href="International Transfer.html">External Transfer</a></li>
+                            <li id="viewtrans"><a href="View All Transfers.html">View All Transfers</a></li>
+                        </ul>
+                    </li>
+                    <li id="credit"><a href="Credit Card.html">Credit Card</a></li>
+                    <li id="Loan"><a href="Loan.html">Loans</a></li>
 
 
-                <li><a href="#" class="second-btn">Pay Bills
-                        <i class="fa-solid fa-caret-down second"></i>
-                    </a>
-                    <ul class="second-show">
-                        <li id="gas"><a href="gas bill.html">Gas</a></li>
-                        <li id="water"><a href="Water Bill.html">Water</a></li>
-                        <li id="telephone"><a href="Telephone Bill.html">Telephone</a></li>
-                        <li id="electricity"><a href="Electricity Bill.html">Electricity</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" class="third-btn">Reminders
-                        <i class="fa-solid fa-caret-down third"></i>
-                    </a>
-                    <ul class="third-show">
-                        <li><a href="#">Set Reminders</a></li>
-                        <li><a href="#">View Reminders</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-        </div>
-        <div class="column middle">
-            <div class="container">
-                <h2>Loan Information</h2>
-                <div class="credit-card-info">
-                    <table id="creditcardInfo">
-                        <tr>
-                            <th> Loan ID </th>
-                            <th> Amount </th>
-                            <th> Type </th>
-                            <th> Monthly Installement </th>
-                            <th> Total Interest </th>
-                        </tr>
-                        <tr>
-                            <td>6473</td>
-                            <td>1,000,000</td>
-                            <td>Personal Loan</td>
-                            <td>8,250</td>
-                            <td>USD</td>
-                        </tr>
-                        <tr>
-                            <td>3409</td>
-                            <td>5,000,000</td>
-                            <td>Car Loan</td>
-                            <td>27,659</td>
-                            <td>EGP</td>
-                        </tr>
-                    </table>
-                </div>
+                    <li><a href="#" class="second-btn">Pay Bills
+                            <i class="fa-solid fa-caret-down second"></i>
+                        </a>
+                        <ul class="second-show">
+                            <li id="gas"><a href="gas bill.html">Gas</a></li>
+                            <li id="water"><a href="Water Bill.html">Water</a></li>
+                            <li id="telephone"><a href="Telephone Bill.html">Telephone</a></li>
+                            <li id="electricity"><a href="Electricity Bill.html">Electricity</a></li>
+                        </ul>
+                    </li>
+                    <li id="reminder"><a href="View Reminders.html">Reminders</a></li>
+                    <li><a href="Notifications.html">Notifications</a></li>
+                    <li><a href="Announcements.html">Announcements</a></li>
+                    <li><a href="Help.html">Help</a></li>
+                </ul>
             </div>
-            <div class="Loan-cont">
-                <div class="Loan-calc">
-                    <h5>Calculate Your Loan</h5>
-                    Loan Amount: <input type="number" class="calc" id="loanamount"> <br>
-                    Loan Duration: <input type="number" class="calc" id="duration" placeholder="in months"> <br>
-                    <input type="radio" name="type" id="personal" value="personal"> Personal Loan </input>
-                    <input type="radio" name="type" id="Car" value="car"> Car Loan </input> <br>
-                    <button id="Calculate" onclick="calculate()"> Calculate </button>
-
-                </div>
-                <div class="Loan-calc-result">
-                    <p class="loan-result" id="total-loan"> Total Loan: 0</p>
-                    <p class="loan-result" id="Interest Rate"> Interest Rate: 0 </p>
-                    <p class="loan-result" id="interest-amount"> Total Interest: 0 </p>
-                    <p class="loan-result" id="pay-month"> Payment Per Month: 0</p>
-                </div>
-            </div>
-            <h2> Apply for a Loan </h2>
-            <div class="Loan-app">
-                <div class="personal-app">
-                    <input type="radio" name="type" id="personal2" onclick="loanapp()"> Personal Loan </input> <br>
-                    <div id="personal-loan">
-                        <div class="personal-words">
-                            <p> National ID </p>
-                            <p> Address </p>
-                            <p> Income source </p>
-                            <p> Monthly Expense </p>
-                            <p> Loan purpose </p>
-                        </div>
-                        <div class="personal-inputs">
-                            <input class="loan" type="number"> <br>
-                            <input class="loan" type="text"> <br>
-                            <input class="loan" type="text"> <br>
-                            <input class="loan" type="number"> <br>
-                            <input class="loan" type="text"> <br>
-                            <button id="submit" onclick="submit()"> Submit </button>
-
-                        </div>
+            <!-- Header section ends  -->
+            <div class="column middle">
+                <div class="container">
+                    <h2>Loan Information</h2>
+                    <div class="credit-card-info">
+                        <table id="creditcardInfo">
+                            <tr>
+                                <th> Loan ID </th>
+                                <th> Amount </th>
+                                <th> Type </th>
+                                <th> Monthly Installement </th>
+                                <th> Total Interest </th>
+                            </tr>
+                            <tr>
+                                <td>6473</td>
+                                <td>1,000,000</td>
+                                <td>Personal Loan</td>
+                                <td>8,250</td>
+                                <td>USD</td>
+                            </tr>
+                            <tr>
+                                <td>3409</td>
+                                <td>5,000,000</td>
+                                <td>Car Loan</td>
+                                <td>27,659</td>
+                                <td>EGP</td>
+                            </tr>
+                        </table>
                     </div>
-
-
                 </div>
-                <div class="car-app">
-                    <input type="radio" name="type" id="car2" onclick="loanapp()"> Car Loan<br>
-                    <div id="car-loan">
-                        <div class="car-words">
-                            <p> National ID </p>
-                            <p> Address </p>
-                            <p> Income source </p>
-                            <p> Monthly Expense </p>
-                            <p> Vehicle Info</p>
+                <div class="Loan-cont">
+                    <div class="Loan-calc">
+                        <h5>Calculate Your Loan</h5>
+                        Loan Amount: <input type="number" class="calc" id="loanamount"> <br>
+                        Loan Duration: <input type="number" class="calc" id="duration" placeholder="in months"> <br>
+                        <input type="radio" name="type" id="personal" value="personal"> Personal Loan </input>
+                        <input type="radio" name="type" id="Car" value="car"> Car Loan </input> <br>
+                        <button id="Calculate" onclick="calculate()"> Calculate </button>
+
+                    </div>
+                    <div class="Loan-calc-result">
+                        <p class="loan-result" id="total-loan"> Total Loan: 0</p>
+                        <p class="loan-result" id="Interest Rate"> Interest Rate: 0 </p>
+                        <p class="loan-result" id="interest-amount"> Total Interest: 0 </p>
+                        <p class="loan-result" id="pay-month"> Payment Per Month: 0</p>
+                    </div>
+                </div>
+                <h2> Apply for a Loan </h2>
+                <div class="Loan-app">
+                    <div class="personal-app">
+                        <input type="radio" name="type" id="personal2" onclick="loanapp()"> Personal Loan </input> <br>
+                        <div id="personal-loan">
+                            <div class="personal-words">
+                                <p> National ID </p>
+                                <p> Address </p>
+                                <p> Income source </p>
+                                <p> Monthly Expense </p>
+                                <p> Loan purpose </p>
+                            </div>
+                            <div class="personal-inputs">
+                                <input class="loan" type="number"> <br>
+                                <input class="loan" type="text"> <br>
+                                <input class="loan" type="text"> <br>
+                                <input class="loan" type="number"> <br>
+                                <input class="loan" type="text"> <br>
+                                <button id="submit" onclick="submit()"> Submit </button>
+
+                            </div>
                         </div>
-                        <div class="car-inputs">
-                            <input class="loan" type="number" required> <br>
-                            <input class="loan" type="text"> <br>
-                            <input class="loan" type="text"> <br>
-                            <input class="loan" type="number"> <br>
-                            <input class="loan" type="text"> <br>
-                            <button id="submit" onclick="submit()"> Submit </button>
+
+
+                    </div>
+                    <div class="car-app">
+                        <input type="radio" name="type" id="car2" onclick="loanapp()"> Car Loan<br>
+                        <div id="car-loan">
+                            <div class="car-words">
+                                <p> National ID </p>
+                                <p> Address </p>
+                                <p> Income source </p>
+                                <p> Monthly Expense </p>
+                                <p> Vehicle Info</p>
+                            </div>
+                            <div class="car-inputs">
+                                <input class="loan" type="number" required> <br>
+                                <input class="loan" type="text"> <br>
+                                <input class="loan" type="text"> <br>
+                                <input class="loan" type="number"> <br>
+                                <input class="loan" type="text"> <br>
+                                <button id="submit" onclick="submit()"> Submit </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="footer">Hi</div>
+            <script>
+
+                $('.first-btn').click(function () {
+                    $('.sidebar .first-show').toggleClass("show");
+                    $('.sidebar .first').toggleClass("rotate");
+                });
+
+                $('.second-btn').click(function () {
+                    $('.sidebar .second-show').toggleClass("show1");
+                    $('.sidebar .second').toggleClass("rotate");
+                });
+
+                $('.third-btn').click(function () {
+                    $('.sidebar .third-show').toggleClass("show2");
+                    $('.sidebar .third').toggleClass("rotate");
+
+                });
+
+                $("#Loan").addClass("active").siblings().removeClass("active");
+                $('.sidebar ul li').click(function () {
+                    $(this).addClass("active").siblings().removeClass("active");
+                });
+
+                function loanapp() {
+                    if (document.getElementById('personal2').checked) {
+                        $("#personal-loan").addClass("active")
+                        $("#car-loan").removeClass("active")
+
+                    }
+
+                    if (document.getElementById('car2').checked) {
+                        $("#car-loan").addClass("active")
+                        $("#personal-loan").removeClass("active")
+                    }
+                }
+
+                function submit() {
+                    if (document.getElementsByClassName("loan").value != null)
+                        alert("Application sent successfully")
+                    else {
+                        alert("Please fill out all the information")
+                    }
+                }
+            </script>
         </div>
-        <div class="footer">Hi</div>
-        <script>
-
-            $('.first-btn').click(function () {
-                $('.sidebar .first-show').toggleClass("show");
-                $('.sidebar .first').toggleClass("rotate");
-            });
-
-            $('.second-btn').click(function () {
-                $('.sidebar .second-show').toggleClass("show1");
-                $('.sidebar .second').toggleClass("rotate");
-            });
-
-            $('.third-btn').click(function () {
-                $('.sidebar .third-show').toggleClass("show2");
-                $('.sidebar .third').toggleClass("rotate");
-
-            });
-
-            $("#Loan").addClass("active").siblings().removeClass("active");
-            $('.sidebar ul li').click(function () {
-                $(this).addClass("active").siblings().removeClass("active");
-            });
-
-            function loanapp() {
-                if (document.getElementById('personal2').checked) {
-                    $("#personal-loan").addClass("active")
-                    $("#car-loan").removeClass("active")
-
-                }
-
-                if (document.getElementById('car2').checked) {
-                    $("#car-loan").addClass("active")
-                    $("#personal-loan").removeClass("active")
-                }
-            }
-
-            function submit() {
-                if (document.getElementsByClassName("loan").value != null)
-                    alert("Application sent successfully")
-                else {
-                    alert("Please fill out all the information")
-                }
-            }
-        </script>
-    </div>
 </body>
