--- a/3HNM BANK/View Reminders.html
+++ b/3HNM BANK/View Reminders.html
@@ -23,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="css/style1.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
@@ -33,163 +34,170 @@
 
 <body>
     <!-- header section strats -->
-    <header class="header">
+    <header class="header_section">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <img src="logo3.png" width="100" height="50">
-        </div>
-        </nav>
+                <img src="logo3.png" width="100" height="50" style="margin-left: 30px;">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+                        <div class="user_option">
+                            <form class="dropdown form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                                <button class="dropbtn btn  my-2 my-sm-0 nav_search-btn" onclick="Profile()">
+                                    <div class="dropdown-content">
+                                        <a href="index.html"> Log out</a>
+                                    </div>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
-    <div class="main">
-        <div class="column sidebar">
-            <ul>
-                <li id="dash"><a href="Dashboard.html">Dashboard</a></li>
-                <li id="tran"><a href="Transactions.html">Transactions</a></li>
-                <li id="transfers"><a href="#" class="first-btn">Transfers
-                        <i class="fa-solid fa-caret-down first"></i>
-                    </a>
-                    <ul class="first-show">
-                        <li id="internal"><a href="Internal Transfer.html">Internal Transfer</a></li>
-                        <li id="domestic"><a href="Domestic Transfer.html">Domestic Transfer</a></li>
-                        <li id="international"><a href="International Transfer.html">External Transfer</a></li>
-                        <li id="viewtrans"><a href="View All Transfers.html">View All Transfers</a></li>
-                    </ul>
-                </li>
-                <li id="credit"><a href="Credit Card.html">Credit Card</a></li>
-                <li id="Loan"><a href="Loan.html">Loans</a></li>
+    <main>
+        <div class="main">
+            <div class="column sidebar">
+                <ul>
+                    <li id="dash"><a href="Dashboard.html">Dashboard</a></li>
+                    <li id="tran"><a href="Transactions.html">Transactions</a></li>
+                    <li id="transfers"><a href="#" class="first-btn">Transfers
+                            <i class="fa-solid fa-caret-down first"></i>
+                        </a>
+                        <ul class="first-show">
+                            <li id="internal"><a href="Internal Transfer.html">Internal Transfer</a></li>
+                            <li id="domestic"><a href="Domestic Transfer.html">Domestic Transfer</a></li>
+                            <li id="international"><a href="International Transfer.html">External Transfer</a></li>
+                            <li id="viewtrans"><a href="View All Transfers.html">View All Transfers</a></li>
+                        </ul>
+                    </li>
+                    <li id="credit"><a href="Credit Card.html">Credit Card</a></li>
+                    <li id="Loan"><a href="Loan.html">Loans</a></li>
 
 
-                <li><a href="#" class="second-btn">Pay Bills
-                        <i class="fa-solid fa-caret-down second"></i>
-                    </a>
-                    <ul class="second-show">
-                        <li id="gas"><a href="gas bill.html">Gas</a></li>
-                        <li id="water"><a href="Water Bill.html">Water</a></li>
-                        <li id="telephone"><a href="Telephone Bill.html">Telephone</a></li>
-                        <li id="electricity"><a href="Electricity Bill.html">Electricity</a></li>
-                    </ul>
-                </li>
-                <li id="reminders"><a href="#" class="third-btn">Reminders
-                        <i class="fa-solid fa-caret-down third"></i>
-                    </a>
-                    <ul class="third-show">
-                        <li><a href="Set Reminder.html">Set Reminders</a></li>
-                        <li><a href="View Reminders.html">View Reminders</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-        </div>
-        <!-- Header section ends  -->
-        <div class="column middle">
-            <div class="reminderbox1">
-                <div class="boxheader">
-                    <h3>Reminders</h3>
-                </div>
-                <div class="contentbox">
-                    <table>
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="gas-bill">
-                                Gas bill</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 300</a></td>
-                            <td><a>Due: 6/6/2023</a></td>
-                        </tr>
+                    <li><a href="#" class="second-btn">Pay Bills
+                            <i class="fa-solid fa-caret-down second"></i>
+                        </a>
+                        <ul class="second-show">
+                            <li id="gas"><a href="gas bill.html">Gas</a></li>
+                            <li id="water"><a href="Water Bill.html">Water</a></li>
+                            <li id="telephone"><a href="Telephone Bill.html">Telephone</a></li>
+                            <li id="electricity"><a href="Electricity Bill.html">Electricity</a></li>
+                        </ul>
+                    </li>
+                    <li id="reminders"><a href="View Reminders.html">Reminders</a></li>
+                    <li><a href="Notifications.html">Notifications</a></li>
+                    <li><a href="Announcements.html">Announcements</a></li>
+                    <li><a href="Help.html">Help</a></li>
+                </ul>
+            </div>
+            <!-- Header section ends  -->
+            <div class="column middle">
+                <div class="reminderbox1">
+                    <div class="boxheader">
+                        <h3>Reminders</h3>
+                    </div>
+                    <div class="contentbox">
+                        <table>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="gas-bill">
+                                    Gas bill</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 300</a></td>
+                                <td><a>Due: 6/6/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="gas-bill">
-                                Water bill</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 349</a></td>
-                            <td><a>Due: 5/6/2023</a></td>
-                        </tr>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="gas-bill">
+                                    Water bill</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 349</a></td>
+                                <td><a>Due: 5/6/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="gas-bill">
-                                Telephone bill</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 123</a></td>
-                            <td><a>Due: 5/6/2023</a></td>
-                        </tr>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="gas-bill">
+                                    Telephone bill</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 123</a></td>
+                                <td><a>Due: 5/6/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="gas-bill">
-                                Electricity bill</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 1000</a></td>
-                            <td><a>Due: 5/6/2023</a></td>
-                        </tr>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="gas-bill">
+                                    Electricity bill</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 1000</a></td>
+                                <td><a>Due: 5/6/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="card-bill">
-                                Credit card bill</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 200</a></td>
-                            <td><a>Due: 30/5/2023</a></td>
-                        </tr>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="card-bill">
+                                    Credit card bill</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 200</a></td>
+                                <td><a>Due: 30/5/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="university-bill">
-                                University Installement</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 1243285</a></td>
-                            <td><a>Due: 6/6/2023</a></td>
-                        </tr>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="university-bill">
+                                    University Installement</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 1243285</a></td>
+                                <td><a>Due: 6/6/2023</a></td>
+                            </tr>
 
-                        <tr class="parent_row">
-                            <td> <input type="checkbox" id="university-bill">
-                                Loan Installement</td>
-                            <td> </td>
-                        </tr>
-                        <tr class="child_row">
-                            <td><a>Amount: 8,250</a></td>
-                            <td><a>Due: 1/7/2023</a></td>
-                        </tr>
-                    </table>
+                            <tr class="parent_row">
+                                <td> <input type="checkbox" id="university-bill">
+                                    Loan Installement</td>
+                                <td> </td>
+                            </tr>
+                            <tr class="child_row">
+                                <td><a>Amount: 8,250</a></td>
+                                <td><a>Due: 1/7/2023</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="footer">Hi</div>
-    <script>
+        <div class="footer">Hi</div>
+        <script>
 
-        $('.first-btn').click(function () {
-            $('.sidebar .first-show').toggleClass("show");
-            $('.sidebar .first').toggleClass("rotate");
-        })
+            $('.first-btn').click(function () {
+                $('.sidebar .first-show').toggleClass("show");
+                $('.sidebar .first').toggleClass("rotate");
+            })
 
-        $('.second-btn').click(function () {
-            $('.sidebar .second-show').toggleClass("show1");
-            $('.sidebar .second').toggleClass("rotate");
-        })
+            $('.second-btn').click(function () {
+                $('.sidebar .second-show').toggleClass("show1");
+                $('.sidebar .second').toggleClass("rotate");
+            })
 
-        $('.third-btn').click(function () {
-            $('.sidebar .third-show').toggleClass("show2");
-            $('.sidebar .third').toggleClass("rotate");
+            $('.third-btn').click(function () {
+                $('.sidebar .third-show').toggleClass("show2");
+                $('.sidebar .third').toggleClass("rotate");
 
-        })
+            })
 
-        $("#reminders").addClass("active").siblings().removeClass("active");
-        $('.sidebar ul li').click(function () {
-            $(this).addClass("active").siblings().removeClass("active");
-        })
+            $("#reminders").addClass("active").siblings().removeClass("active");
+            $('.sidebar ul li').click(function () {
+                $(this).addClass("active").siblings().removeClass("active");
+            })
 
 
-    </script>
+        </script>
 </body>
 
 </html>
