--- a/3HNM BANK/hagar.html
+++ b/3HNM BANK/hagar.html
@@ -146,14 +146,7 @@
                             <li id="electricity"><a href="Electricity Bill.html">Electricity</a></li>
                         </ul>
                     </li>
-                    <li id="reminders"><a href="#" class="third-btn">Reminders
-                            <i class="fa-solid fa-caret-down third"></i>
-                        </a>
-                        <ul class="third-show">
-                            <li><a href="Set Reminder.html">Set Reminders</a></li>
-                            <li><a href="View Reminders.html">View Reminders</a></li>
-                        </ul>
-                    </li>
+                    <li id="reminder"><a href="View Reminders.html">Reminders</a></li>
                     <li><a href="Notifications.html">Notifications</a></li>
                     <li><a href="Announcements.html">Announcements</a></li>
                     <li><a href="Help.html">Help</a></li>
