--- a/3HNM BANK/Notifications.html
+++ b/3HNM BANK/Notifications.html
@@ -36,6 +36,44 @@
             text-align: center;
             margin-top: 30px;
         }
+
+        .notification-container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .notification {
+            display: flex;
+            align-items: center;
+            border: 1px solid #ccc;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
+
+        .notification.new {
+            background-color: #cbd5cb;
+        }
+
+        .notification-icon {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            background-color: #ff5a5f;
+            margin-right: 10px;
+        }
+
+        .notification-content {
+            flex: 1;
+        }
+
+        .notification-content h3 {
+            margin: 0;
+            font-size: 18px;
+        }
+
+        .notification-content p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 
