--- a/3HNM BANK/International Transfer.html
+++ b/3HNM BANK/International Transfer.html
@@ -68,13 +68,13 @@
             border-radius: 4px;
         }
 
-        .form-group input[type="submit"] {
+        .form-group input[type="button"] {
             background-color: #4CAF50;
             color: white;
             cursor: pointer;
         }
 
-        .form-group input[type="submit"]:hover {
+        .form-group input[type="button"]:hover {
             background-color: #45a049;
         }
     </style>
