--- a/3HNM BANK/Customer Inquiries.html
+++ b/3HNM BANK/Customer Inquiries.html
@@ -70,14 +70,11 @@
       <div class="column sidebar">
         <ul>
           <li id="dash"><a href="#">Dashboard</a></li>
+          <li id="inq"><a href="Customer Inquiries.html">Credit Card Applications</a></li>
+          <li id="inq"><a href="Customer Inquiries.html">Loan Applications</a></li>
           <li id="inq"><a href="Customer Inquiries.html">Cusomer Inquiries</a></li>
-          <li id="transfers"><a href="#" class="first-btn">Transfers
-              <i class="fa-solid fa-caret-down first"></i>
-            </a>
-            <ul class="first-show">
-              <li id="internal"><a href="#">Internal Transfer</a></li>
-            </ul>
-          </li>
+          <li id="inq"><a href="Customer Inquiries.html">Check Reports</a></li>
+          <li id="inq"><a href="Customer Inquiries.html">Announcements</a></li>
       </div>
       <!-- Header section ends  -->
       <div class="column middle">
