--- a/3HNM BANK/Customer Inquiries.html
+++ b/3HNM BANK/Customer Inquiries.html
@@ -30,7 +30,7 @@
   <link href="css/all.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="User.js"></script>
-  <title>Banker Inquiries Webpage</title>
+  <title> Banker Inquiries Webpage </title>
   <style>
     table tr td {
       padding: 10px;
@@ -70,11 +70,13 @@
       <div class="column sidebar">
         <ul>
           <li id="dash"><a href="#">Dashboard</a></li>
-          <li id="inq"><a href="Customer Inquiries.html">Credit Card Applications</a></li>
-          <li id="inq"><a href="Customer Inquiries.html">Loan Applications</a></li>
+          <li id="credit"><a href="Customer Inquiries.html">Credit Card Applications</a></li>
+          <li id="open"><a href="Open Account Request.html">Open Account Requests</a></li>
+          <li id="clise"><a href="Close Account Request.html">Close Account Requests</a></li>
+          <li id="loan"><a href="Customer Inquiries.html">Loan Applications</a></li>
           <li id="inq"><a href="Customer Inquiries.html">Cusomer Inquiries</a></li>
-          <li id="inq"><a href="Customer Inquiries.html">Check Reports</a></li>
-          <li id="inq"><a href="Customer Inquiries.html">Announcements</a></li>
+          <li id="reports"><a href="Customer Inquiries.html">Check Reports</a></li>
+          <li id="announcements"><a href="Customer Inquiries.html">Announcements</a></li>
       </div>
       <!-- Header section ends  -->
       <div class="column middle">
